# whole-body-estimators

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  icubFloatingBaseEstimatorV1.ini  pixi.toml  pixi_activation.bat  pixi_activation.sh  pixi_source_deps.yaml  set_install_prefix.bat  set_install_prefix.sh
.github/workflows/: ci.yml  conda-ci.yml  pixi-auto-update-ci.yml  pixi-ci.yml
app/: CMakeLists.txt
app/robots/iCubGazeboV2_5/: fbe-analogsens.xml  launch-fbe-analogsens.xml
app/robots/iCubGenova04/: fbe-analogsens.xml  launch-fbe-analogsens.xml  wholebodydynamics-external.xml
cmake/: AddInstallRPATHSupport.cmake  AddUninstallTarget.cmake  WBEAddUnitTest.cmake
devices/: CMakeLists.txt
devices/baseEstimatorV1/: CMakeLists.txt  README.md  baseEstimatorV1.ini
devices/baseEstimatorV1/app/: CMakeLists.txt
devices/baseEstimatorV1/app/robots/iCubGazeboV2_5/: fbe-analogsens.xml  launch-fbe-analogsens.xml  wholebodydynamics-external.xml
devices/baseEstimatorV1/app/robots/iCubGazeboV2_5/estimators/: fbe-analogsens.xml
devices/baseEstimatorV1/app/robots/iCubGenova04/: fbe-analogsens.xml  launch-fbe-analogsens.xml
devices/baseEstimatorV1/app/robots/iCubGenova04/estimators/: fbe-analogsens.xml
devices/baseEstimatorV1/include/: Utils.hpp  Utils.tpp  baseEstimatorV1.h
devices/baseEstimatorV1/ros/: fbeLaunch-robot.rviz  fbeViz.launch
devices/baseEstimatorV1/scope/: base_scope.xml  base_velocity.xml  contact_scope.xml  waist_imu_scope.xml
devices/baseEstimatorV1/src/: Utils.cpp  WalkingLogger.cpp  baseEstimatorV1.cpp  configureEstimator.cpp  fbeRobotInterface.cpp
devices/baseEstimatorV1/thrifts/: floatingBaseEstimationRPC.thrift
devices/genericSensorClient/: CMakeLists.txt  GenericSensorClient.cpp  GenericSensorClient.h  genericSensorClient.ini
devices/virtualAnalogClient/: CMakeLists.txt  VirtualAnalogClient.cpp  VirtualAnalogClient.h  virtualAnalogClient.ini
devices/virtualAnalogRemapper/: CMakeLists.txt  VirtualAnalogRemapper.cpp  VirtualAnalogRemapper.h  virtualAnalogRemapper.ini
devices/wholeBodyDynamics/: .CMakeLists.txt.kate-swp  CMakeLists.txt  GravityCompensationHelpers.cpp  GravityCompensationHelpers.h  KnownExternalWrench.cpp  KnownExternalWrench.h  README.md  SixAxisForceTorqueMeasureHelpers.cpp  SixAxisForceTorqueMeasureHelpers.h  TimeProfiler.cpp  TimeProfiler.h  UnknownWrenchContact.cpp  UnknownWrenchContact.h  WholeBodyDynamicsDevice.cpp  WholeBodyDynamicsDevice.h  wholebodydynamics.ini
devices/wholeBodyDynamics/app/: CMakeLists.txt  launch-wholebodydynamics-icub-eight-fts-sim.xml  launch-wholebodydynamics-icub-four-fts.xml  launch-wholebodydynamics-icub-six-fts-sim.xml  launch-wholebodydynamics-icub-six-fts.xml  launch-wholebodydynamics-icub3-sim.xml  launch-wholebodydynamics-icubheidelberg01.xml  wholebodydynamics-icub-eth-six-fts.xml  wholebodydynamics-icub-external-and-can-four-fts.xml  wholebodydynamics-icub-external-and-can-six-fts.xml  wholebodydynamics-icub-external-eight-fts-sim.xml  wholebodydynamics-icub-external-six-fts-sim.xml  wholebodydynamics-icub3-external-sim.xml  wholebodydynamics-icubheidelberg01-external.xml  wholebodydynamics-icubheidelberg01-robot.xml
devices/wholeBodyDynamics/test/: CMakeLists.txt  WholeBodyDynamicsUnitTests.cpp  ergocub_simulated_wholebodydynamics.xml  ergocub_test_all.xml
devices/wholeBodyDynamics/test/fakeFTs/: CMakeLists.txt  fakeFTs.cpp  fakeFTs.h
doc/howto/: force_control_on_icub.md  useTemperatureCoefficientsAndOffsetCompensationInWholeBodyDynamics.md
idl/: CMakeLists.txt
idl/VectorsCollection/: CMakeLists.txt  VectorsCollection.thrift
idl/floatingBaseEstimatorRPC/: CMakeLists.txt
idl/floatingBaseEstimatorRPC/autogenerated/: codyco_floatingBaseEstimatorRPC_thrift.cmake  floatingBaseEstimatorRPC_index.txt
idl/floatingBaseEstimatorRPC/autogenerated/include/codyco/: HomTransform.h  floatingBaseEstimatorRPC.h
idl/floatingBaseEstimatorRPC/autogenerated/src/: HomTransform.cpp  floatingBaseEstimatorRPC.cpp
idl/floatingBaseEstimatorRPC/codyco/: floatingBaseEstimatorRPC.thrift
idl/wholeBodyDynamicsSettings/: CMakeLists.txt  wholeBodyDynamicsSettings.thrift
idl/wholeBodyDynamicsSettings/autogenerated/: wholeBodyDynamicsSettings_index.txt  wholeBodyDynamicsSettings_thrift.cmake
idl/wholeBodyDynamicsSettings/autogenerated/include/: ContactPoint.h  Gravity.h  KinematicSourceType.h  wholeBodyDynamicsSettings.h
idl/wholeBodyDynamicsSettings/autogenerated/src/: ContactPoint.cpp  Gravity.cpp  KinematicSourceType.cpp  wholeBodyDynamicsSettings.cpp
idl/wholeBodyDynamics_IDLServer/: CMakeLists.txt  wholeBodyDynamics_IDLServer.thrift
idl/wholeBodyDynamics_IDLServer/autogenerated/: wholeBodyDynamics_IDLServer_index.txt  wholeBodyDynamics_IDLServer_thrift.cmake
idl/wholeBodyDynamics_IDLServer/autogenerated/include/: wholeBodyDynamics_IDLServer.h
idl/wholeBodyDynamics_IDLServer/autogenerated/src/: wholeBodyDynamics_IDLServer.cpp
include/: icubFloatingBaseEstimatorV1.h
libraries/: CMakeLists.txt
libraries/ctrlLibRT/: CMakeLists.txt
libraries/ctrlLibRT/include/ctrlLibRT/: filters.h
libraries/ctrlLibRT/src/: filters.cpp
libraries/wholeBodyDynamicsHelpers/: CMakeLists.txt
ros/: fbeViz.launch
scope/: base_scope.xml  base_velocity.xml  contact_scope.xml  waist_imu_scope.xml
scripts/: CMakeLists.txt  liftiCubInGui.sh
src/: configureEstimator.cpp  fbeRobotInterface.cpp  icubFloatingBaseEstimatorV1.cpp
thrifts/: floatingBaseEstimationRPC.thrift
