# Copyright (C) 2019 Istituto Italiano di Tecnologia (IIT). All rights reserved.
# This software may be modified and distributed under the terms of the
# GNU Lesser General Public License v2.1 or any later version.

add_subdirectory(baseEstimatorV1)
add_subdirectory(wholeBodyDynamics)
add_subdirectory(virtualAnalogClient)
add_subdirectory(virtualAnalogRemapper)
add_subdirectory(genericSensorClient)
